authorizationpolicy-probe.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allowlist-by-paths
  namespace: dev-profile
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - /metrics   # The path to collect metrics by system pod.
              - /healthz   # The path to probe by system pod.
