authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-dev-profile
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["dev-profile", "kubeflow"]
